--- a/opencv_base/opencv_base02.ipynb
+++ b/opencv_base/opencv_base02.ipynb
@@ -272,10 +272,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import cv2\n",
+    "\n",
+    "img = cv2.imread(\"winnie.jpg\")\n",
+    "\n",
+    "hsv = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
+    "\n",
+    "cv2.imshow(\"origin_pic\",img)\n",
+    "cv2.imshow(\"hsv\",hsv)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n"
+   ]
   },
   {
    "cell_type": "markdown",
