--- a/face_detect/face_recog.ipynb
+++ b/face_detect/face_recog.ipynb
@@ -6,7 +6,10 @@
    "source": [
     "## 臉部識別\n",
     "#### 流程\n",
-    "轉灰階>選定模型>套模>偵測>出圖(迴圈)"
+    "轉灰階>選定模型>套模>偵測>出圖(迴圈)\n",
+    "- 捕捉人臉\n",
+    "- 捕捉多個人臉(練習調整超參數)\n",
+    "- (鏡頭)即時捕捉人臉"
    ]
   },
   {
@@ -94,6 +97,77 @@
     "cv2.imwrite(\"bedraw_img_02.jpg\", bedraw_img, [cv2.IMWRITE_JPEG_QUALITY, 98])\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 動態捕捉人臉"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Screenshot saved as screenshot_1.jpg\n",
+      "Screenshot saved as screenshot_2.jpg\n",
+      "Screenshot saved as screenshot_3.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "# 取得影片之路徑 \n",
+    "# cap = cv2.VideoCapture(\"video_test01.mp4\")\n",
+    "# 取得視訊鏡頭的畫面\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "screenshot_count = 0\n",
+    "\n",
+    "while True:\n",
+    "    ret, frame = cap.read()\n",
+    "    frame = cv2.resize(frame, (0, 0), fx=1.2, fy=1.2)\n",
+    "\n",
+    "    if ret:\n",
+    "        # 轉灰階\n",
+    "        gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "        # 選定模型\n",
+    "        faceCascade = cv2.CascadeClassifier(\"face_detect.xml\")\n",
+    "        # 用輝居的套模 (勾勒出輪廓回傳位子)\n",
+    "        face_rect = faceCascade.detectMultiScale(gray, 1.1, 8)\n",
+    "        count_how_many_people = len(face_rect)\n",
+    "        for i, (x, y, w, h) in enumerate(face_rect, 1):\n",
+    "        # 套用在原圖之上\n",
+    "            cv2.putText(frame, f\"Person {i}\", (x + 10, y - 5), cv2.FONT_HERSHEY_DUPLEX, 1, (0, 0, 255), 1)\n",
+    "            cv2.rectangle(frame, (x, y), (x + w, y + h), (0, 0, 255), 4)\n",
+    "        # 顯示人數\n",
+    "        cv2.putText(frame, f\"Total People: {count_how_many_people}\", (20, 40), cv2.FONT_HERSHEY_DUPLEX, 1, (0, 255, 0), 2)\n",
+    "        \n",
+    "        cv2.imshow(\"video\", frame)\n",
+    "        # 螢幕截圖\n",
+    "        key = cv2.waitKey(10)\n",
+    "        if key == ord(\"s\"):\n",
+    "            # Increment the screenshot count\n",
+    "            screenshot_count += 1\n",
+    "            # Save the current frame as an image\n",
+    "            cv2.imwrite(f\"screenshot_{screenshot_count}.jpg\", frame)\n",
+    "            print(f\"Screenshot saved as screenshot_{screenshot_count}.jpg\")\n",
+    "    else:\n",
+    "        break\n",
+    "    # 每取得1針 會等待100毫秒 如果監聽到q按下去(跳出迴圈)waitKey等待鍵盤某個鍵被按下去\n",
+    "    if cv2.waitKey(10) == ord(\"q\"):\n",
+    "        cv2.destroyAllWindows()\n",
+    "        break\n",
+    "\n",
+    "# 釋放攝像頭資源\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
    ]
   }
  ],
