--- a/opencv_base/opencv_base02.ipynb
+++ b/opencv_base/opencv_base02.ipynb
@@ -9,6 +9,7 @@
     "- 2.讀取影片\n",
     "    - 2-1. 讀取影片\n",
     "    - 2-2. 使用攝像頭\n",
+    "    - 2-3. 對畫面截圖\n",
     "- 3.numpy對於圖片的操作\n",
     "- 4.常用函示  \n",
     "    - gbr to gray\n",
@@ -62,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.讀取影片(包括鏡頭)"
+    "## 2.讀取影片(包括鏡頭) 存取影片截圖"
    ]
   },
   {
@@ -84,6 +85,60 @@
     "\n",
     "    if ret:\n",
     "        cv2.imshow(\"video\", frame)\n",
+    "    else:\n",
+    "        break\n",
+    "    #每取得1針 會等待100毫秒 如果監聽到q按下去(跳出迴圈)waitKey等待鍵盤某個鍵被按下去\n",
+    "    if cv2.waitKey(10) == ord(\"q\"):\n",
+    "        cv2.destroyAllWindows()\n",
+    "        break\n",
+    "    \n",
+    "# 釋放攝像頭資源\n",
+    "cap.release()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 加入截圖\n",
+    "cv2.imwrite()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Screenshot saved as screenshot_1.jpg\n",
+      "Screenshot saved as screenshot_2.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "# 取得影片之路徑 \n",
+    "#cap = cv2.VideoCapture(\"video_test01.mp4\")\n",
+    "# 取得視訊鏡頭的畫面\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "screenshot_count = 0\n",
+    "\n",
+    "while True:\n",
+    "    ret, frame = cap.read()\n",
+    "    frame = cv2.resize(frame, (0,0),fx=1.2, fy=1.2)\n",
+    "\n",
+    "    if ret:\n",
+    "        cv2.imshow(\"video\", frame)\n",
+    "        key = cv2.waitKey(10)\n",
+    "        if key == ord(\"s\"):\n",
+    "            # Increment the screenshot count\n",
+    "            screenshot_count += 1\n",
+    "            # Save the current frame as an image\n",
+    "            cv2.imwrite(f\"screenshot_{screenshot_count}.jpg\", frame)\n",
+    "            print(f\"Screenshot saved as screenshot_{screenshot_count}.jpg\")\n",
     "    else:\n",
     "        break\n",
     "    #每取得1針 會等待100毫秒 如果監聽到q按下去(跳出迴圈)waitKey等待鍵盤某個鍵被按下去\n",
@@ -272,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
