--- a/face_detect_ mosaic/face_detect_mosaic.ipynb
+++ b/face_detect_ mosaic/face_detect_mosaic.ipynb
@@ -341,7 +341,7 @@
     "            mosaic = cv2.resize(mosaic, (mw,mh), interpolation=cv2.INTER_LINEAR)\n",
     "            mosaic = cv2.resize(mosaic, (w,h), interpolation=cv2.INTER_NEAREST)\n",
     "            frame[y:y+h, x:x+w] = mosaic\n",
-    "        cv2.imshow('masaic_cam', frame)\n",
+    "        cv2.imshow('mosaic_cam', frame)\n",
     "\n",
     "        key = cv2.waitKey(10)\n",
     "        if key == ord(\"s\"):\n",
